add bad script for auction

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TIP4_3 demo",
   "scripts": {
     "build": "locklift build --config locklift.config.js",
-    "deploy": "locklift run --config locklift.config.js --network devnet --script scripts/1-deploy-collection.js"
+    "deploy": "locklift run --config locklift.config.js --network devnet --script scripts/1-deploy-collection.js",
+    "deployMarket": "locklift run --config locklift.config.js --network devnet --script scripts/2-deploy-auction.js"
   },
   "author": "itgold.io",
   "license": "MIT",
